alignment fixes

--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -1,1 +1,12 @@
 /* Enter your custom styles here */
+.tableCSS td:nth-child(n+3){
+    text-align: right !important;
+}
+
+.tableCSS th {
+    text-align: center !important;
+}
+
+.packingTableCSS td:nth-child(n+2){
+    text-align: right !important;
+}
